对dubbo理解有问题，websocket使用rmq实现服务器间的通信，dubbo在业务分层的时候使用